Rename table column with dp prefix. Add unistall methode.

--- a/_output/templates/public/devpandi_media_bbcode_two_click.html
+++ b/_output/templates/public/devpandi_media_bbcode_two_click.html
@@ -1,3 +1,4 @@
+<xf:css src="bb_code.less" />
 <div class="bbCodeBlock bbCodeBlock--screenLimited bbCodeBlock--dpTwoClick" id="mediaBbCode-{{ $mediaID }}">
 	<div class="bbCodeBlock-title">
 		{{ phrase('dp_media_two_click_title', {'mediaProvider': $mediaProvider}) }}
